--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,7 +291,7 @@ header {
     width: 70%;
     height: 900px;
     padding-top: 50px;
-    background-color: blue; /*era blue*/ /*#f7f5f2;*/
+    background-color: #f7f5f2; /*era blue*/ /*#f7f5f2;*/
     max-width: 100%;
 }
 
@@ -400,7 +400,7 @@ li {
     height: 269px; /*269*/
     width: 460px;
     margin-top:35px ;
-    background-color: red; /* era purple*/
+    background-color: #f7f5f2; /* era purple*/
     max-width: 100%;
     
 }
