--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,7 @@ header {
     grid-area: 1 / 1 / 4 / 4;
     z-index: -1;
     max-width: 100%;
+    width: 100%;
     height: auto;
 }
 
@@ -185,6 +186,18 @@ header {
 
 }
 
+#jjtitulo-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height:21px ;
+    width: 100%;
+    font-size: 20px;
+    margin-bottom: 40px;
+    /*margin-top: 100px;*/
+}
+
+
 .jjtitulo {
     /*position: absolute;*/
     margin: auto;
@@ -194,6 +207,7 @@ header {
     top: 36px;
     margin-bottom: 60px;
     padding-left: 6px;
+    padding-right: 6px;
     
   
     font-style: normal;
@@ -202,6 +216,9 @@ header {
     line-height: 21px;
     color: white;
     background-color: black;
+
+    text-align: center;
+    
     }
   
   .jjtext1 {
