correção de cor

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,7 +194,7 @@ header {
     width: 100%;
     font-size: 20px;
     margin-bottom: 40px;
-    background-color: yellow;
+    background-color: #f7f5f2;
     /*margin-top: 100px;*/
 }
 
