--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,8 +70,9 @@ header {
     grid-area: 1 / 1 / 4 / 4;
     z-index: -1;
     max-width: 100%;
-    /*width: 100%;*/
+    width: 100%;
     height: auto;
+    max-height: 75vh;
 }
 
 .herotext-left {
