--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,9 +318,9 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height:21px ;
+    /*height:21px ;*/
     width: 100%;
-    font-size: 20px;
+    
     margin-bottom: 40px;
     /*margin-top: 100px;*/
     
@@ -332,7 +332,10 @@ header {
     text-align: center;
     background-color: black;
     color: white;
-    width: 80px;
+    font-size: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
+    /*width: 80px;*/
 }
 
 
@@ -464,12 +467,16 @@ li {
     font-size: 16px;
     color: white;
     background-color: black;
-    margin-left: 35%;
-    margin-right: 35%;
+    /*margin-left: 35%;
+    margin-right: 35%;*/
     margin-top: 40px;
     margin-bottom: 40px;
-    width: 150px;
+    /*width: 150px;*/
     text-align: center;
+
+    font-size: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
 
 }
 
