--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
     width: 100%;
 }
 
+/* julia - position fixed nav*/
 .navigation {
     display: flex;
     justify-content: space-evenly;
@@ -158,6 +159,7 @@ header {
     }
 }
 
+/* ABOUT */
 .content {
     width: 50%;
     display: flex;
@@ -291,7 +293,7 @@ header {
   }
 
 
-
+/* MENU */
 /*juliana*/
 .section{
     width: 100%;
